--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
+  assets:
+    - asset/img/
+
   fonts:
     - family: NotoSans
       fonts:
